Fixes bugged lockpickslot accessing container